fixed: removed z-index from image, now slider is visible in darkMode

--- a/src/ImageSlider/ImageSlider.css
+++ b/src/ImageSlider/ImageSlider.css
@@ -19,7 +19,6 @@
 }
 
 .slider-container img {
-    z-index: -1;
     /*border-radius: 0.5rem;*/
     user-select: none;
     flex-grow: 0;
